fix layout bug

--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -17,6 +17,7 @@ body {
   font-family: $base-font-family;
   color: $base-font-color;
   background-color: $base-background-color;
+  min-width: $min-screen-size;
 }
 
 ul {
