--- a/client/src/sass/components/_news.scss
+++ b/client/src/sass/components/_news.scss
@@ -3,6 +3,10 @@
   padding: 40px 30px;
 }
 
+.news-section {
+  overflow: hidden;
+}
+
 .news-article-image {
   margin-bottom: 22px;
   overflow: hidden;
